option('docs', type : 'boolean', value : true, description : 'enable developer documentation')
option('introspection', type : 'boolean', value : true, description : 'generate GObject Introspection data')
option('nls', type : 'boolean', value : true, description : 'enable native language support')
option('tests', type : 'boolean', value : true, description : 'enable tests')
